fixed button shifting navbar

--- a/css/core-styles.css
+++ b/css/core-styles.css
@@ -91,6 +91,7 @@ h1, h2, h3, h4, h5, h6 {
     -webkit-transition: .3s ease;
     -o-transition: .3s ease;
     transition: .3s ease;
+    border: 1px solid var(--primary);
 }
 
 button {
